--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bd7b6a">  <td>20/06/06 17:09:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestAnnotations3.AccountEnquiry()[pri:0, instance:com.annotations.TestAnnotations3@3327bd23]">AccountEnquiry</td> 
-  <td>main@963601816</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>20/06/06 17:09:26</td>   <td>4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestAnnotations3.FundTransfer()[pri:0, instance:com.annotations.TestAnnotations3@3327bd23]">FundTransfer</td> 
-  <td>main@963601816</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>20/06/06 17:09:26</td>   <td>-18</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestAnnotations3.Login()[pri:0, instance:com.annotations.TestAnnotations3@3327bd23]">Login</td> 
-  <td>main@963601816</td>   <td></td> </tr>
+<tr bgcolor="659282">  <td>20/06/07 17:54:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AssertionsDemo.Facebook()[pri:0, instance:com.assertions.AssertionsDemo@2b2948e2]">Facebook</td> 
+  <td></td>   <td></td> </tr>
+<tr bgcolor="659282">  <td>20/06/07 17:54:14</td>   <td>-95</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AssertionsDemo.Launch()[pri:0, instance:com.assertions.AssertionsDemo@2b2948e2]">Launch</td> 
+  <td>main@1166807841</td>   <td></td> </tr>
+<tr bgcolor="659282">  <td>20/06/07 17:54:14</td>   <td>5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AssertionsDemo.Login()[pri:0, instance:com.assertions.AssertionsDemo@2b2948e2]">Login</td> 
+  <td></td>   <td></td> </tr>
 </table>
